mooninfo/moonphases-v2.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: moonphases-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: moonphases
        version: v2
    spec:
      containers:
      - name: moonphases
        image:  gcr.io/mokeefe-empathy/moonphases:latest
        imagePullPolicy: Always
        args:
        - "--city=New York, NY"
        ports:
        - containerPort: 8001
