mooninfo/k8s-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: moonsite-lb 
spec:
  type: LoadBalancer
  selector:
    app: moonsite
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
