mooninfo/moonphases-v1.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: moonphases-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: moonphases
        version: v1
    spec:
      containers:
      - name: moonphases
        image:  gcr.io/mokeefe-empathy/moonphases:latest
        imagePullPolicy: Always
        args:
        - "--city=Seattle, WA"
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: moonphases
spec:
  type: ClusterIP
  selector:
    app: moonphases
  ports:
  - port: 80
    targetPort: 8001
    name: grpc
