mooninfo/istio-ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: moon-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moon-ext
spec:
  hosts:
  - "*"
  gateways:
  - moon-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: moonsite
        port:
          number: 80
