mooninfo/istio-split-traffic.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: moonphases
spec:
  host: moonphases
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moonphases
spec:
  hosts:
  - moonphases
  http:
  - route:
    - destination:
        host: moonphases
        port:
          number: 80
        subset: v2
      weight: 90
    - destination:
        host: moonphases
        port:
          number: 80
        subset: v1
      weight: 10
